DEMO: qt a11y Implement suggested QAccessibleSelectionInterface

This adds an implementation of the
`QAccessibleSelectionInterface` suggested
to be added to qtbase in order to support the
AT-SPI selection interface, s. QTBUG-105909 [1].

Suggested Qt Gerrit changes:
https://codereview.qt-project.org/c/qt/qtbase/+/428566
https://codereview.qt-project.org/c/qt/qtbase/+/428567

With the suggested qtbase changes in place,
Qt bridges the `QAccessibleSelectionInterface`
to the AT-SPI selection interface [2].

A screencast demonstrating the use of all AT-SPI
selection methods on a Calc spreadsheet
with the two Qt Gerrit changes and this change
in place is attached to QTBUG-105909 [1].

Exposing information about the selection via the AT-SPI
selection interface is e.g. one prerequisite for the Orca
screen reader to announce selected cells in Calc.

TODO: get/handle review for Qt changes, then adapt this
change as needed,...

[1] https://bugreports.qt.io/browse/QTBUG-105909
[2] https://lazka.github.io/pgi-docs/Atspi-2.0/classes/Selection.html

Change-Id: Iac3c050448183610af3bd3b10a56e82d7d52cb91